Fixed the small gap in cover photo if not logged in on mobile device.

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -133,6 +133,6 @@
 
 @media (max-width: 460px){
   .carousel{
-    margin-top:-50px;
+    margin-top:-70px;
   }
 }
